# Jarvis

./: .envexample  .gitignore  README.md  package-lock.json  package.json  requirements.txt
ai/: 00_repo_summary.md  01_architecture.md  02_coordinate_scaling.md  ai_inference.md  architecture.md  coordinate_scaling.md  detailed_summaries.md  files_index.json  matching_heuristics.md  repo_summary.md  sarvam.md
frontend/src/: App.tsx  CommandBar.tsx  Overlay.tsx  styles.css
frontend/src/lib/: autopilot.ts  citations.ts  guidance.ts  tauri.ts  tts.ts  types.ts
frontend/tests/: autopilot.test.ts  citations.test.ts  guidance.test.ts  tts.test.ts
mobile/: package-lock.json  package.json
python/: main.py  ui_observer.py
python/ai/: client.py  groq_client.py  local_intents.py  ollama_client.py  prompt.py
python/app_context/: antigravity ide.md  antigravity.md  app.md  chatgpt.md  msedgewebview2.md  registry.py  systemsettings.md  whatsapp.root.md
python/capture/: screen.py
python/computer_use/: __init__.py  agent.py  tools.py
python/ocr/: extract.py
python/tests/: test_app_context.py  test_computer_use_tools.py  test_guidance_flow.py  test_spotify_tool.py  test_ui_map_cache.py  test_wil_pipeline.py  test_window_selection.py
python/utils/: logging.py  matching.py  screen_elements.py  ui_map_cache.py  uia.py  window.py
python/wil/: pipeline.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
